# tw-policies

./: .gitignore  README.md  approximators.py  baselines.py  cnn.py  learner.py  networks.py  policy_functions.py  pyproject.toml  requirements.txt  returns.py  run.py  setup.cfg  setup.py  tags  utils.py
agents/: __init__.py  a2c.py  actorcritic.py  ddpg.py  pgagent.py  ppo.py  reinforce.py  sac.py
example/: run.py
models/: replay.py
models/policy/: abstractpolicy.py  continuous.py  deterministic.py  discrete.py
models/value/: __init__.py  abstractreturns.py  estimation.py  montecarlo.py
networks/: feedforward.py
policies/: utils.py
policies/agents/: __init__.py  pgagent.py  ppo.py  reinforce.py
policies/models/policy/: __init__.py  continuous.py  deterministic.py  discrete.py  linear.py
policies/models/value/: __init__.py  estimation.py  montecarlo.py
policies/networks/: __init__.py  feedforward.py
proposal/: proposal.tex
report/: N_score.m  main.aux  main.bbl  main.bcf  main.blg  main.dvi  main.tex  policyfn.m  references.bib  references.blg  reinforce.m  sm_score.m
src/: .zshrc  MUJOCO_LOG.TXT  __init__.py  cnn.py  learner.py  policy_functions.py  returns.py  run.py  train.py  utils.py  value_functions.py
src/agents/: actorcritic.py  parallel.py  pgagent.py  policygradient.py  reinforce.py
src/models/: feedforward.py  replay.py
src/models/policy/: __init__.py  continuous.py  discrete.py  policy.py
src/models/returns/: __init__.py  abstractreturns.py  (+2 more)
src/networks/: mlp.py
weights/: A2C-LunarLander-v2.pickle  PPO-CartPole-v1.pickle
(+4 files in other folders)
