[metadata]
name = sq_anyPG
author = Tom Wilson
version = 0.1

[options]
install_requires =
    numpy>=1.8.0rc1
    matplotlib>=1.3.1
    ale-py==0.7.4
    AutoROM==0.4.2
    Box2D==2.3.2
    box2d-py==2.3.8
    gym==0.23.0
    gym-notices==0.0.6
    pygame==2.1.2
    scipy
    torch
    tqdm==4.62.3
